# wcm-surrogate

./: .gitignore  README.md  pyproject.toml
src/wcm_surrogate/: __init__.py
src/wcm_surrogate/growth_rate/: __init__.py  langevin.py
src/wcm_surrogate/validation/: __init__.py  compare.py  experimental_data.py
tests/: test_growth_rate.py
